@@ -351,6 +351,7 @@ void ovsdb_idl_txn_wait(const struct ovsdb_idl_txn *);
 enum ovsdb_idl_txn_status ovsdb_idl_txn_commit(struct ovsdb_idl_txn *);
 enum ovsdb_idl_txn_status ovsdb_idl_txn_commit_block(struct ovsdb_idl_txn *);
 void ovsdb_idl_txn_abort(struct ovsdb_idl_txn *);
+void ovsdb_idl_txn_assert_read_only(struct ovsdb_idl_txn *, bool assert);
 
 const char *ovsdb_idl_txn_get_error(const struct ovsdb_idl_txn *);
 
